@@ -1,3 +1,7 @@
+2003-09-01  Christian M. Stamgren  <christian@stamgren.com>
+
+	* basic numbers as doubles and longlong.: 
+
 2003-08-25  Christian M. Stamgren  <christian@stamgren.com>
 
 	* Added files README TODO AUTHORS
